--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,9 +17,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.3"
   }
