--- a/digital-checksheet/package.json
+++ b/digital-checksheet/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "date-fns": "^2.22.1",
     "react": "^18.3.1",
