--- a/digital-checksheet/public/manifest.json
+++ b/digital-checksheet/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "RDL DCS",
+  "name": "Digital Check Sheet React Applcation",
   "icons": [
     {
       "src": "favicon.ico",
